--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-graphql": "^4.10.1",
     "@strapi/plugin-i18n": "4.10.1",
     "@strapi/plugin-users-permissions": "4.10.1",
+    "@strapi/provider-upload-aws-s3": "^4.10.2",
     "@strapi/strapi": "4.10.1",
     "pg": "8.8.0"
   },
