--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/plugin-users-permissions": "4.10.1",
     "@strapi/provider-upload-aws-s3": "^4.10.2",
     "@strapi/strapi": "4.10.1",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "strapi-plugin-vercel-deploy": "^1.4.0"
   },
   "author": {
     "name": "A Strapi developer"
